Wire up CRDs into charts

--- a/config/agent-chart-crds/kustomization.yaml
+++ b/config/agent-chart-crds/kustomization.yaml
@@ -3,6 +3,6 @@ namePrefix: opni-
 bases:
   - ../agent-crd
 
-patchesStrategicMerge:
-- patches/webhook_in_logadapters.yaml
-- patches/cainjection_in_logadapters.yaml
+#patchesStrategicMerge:
+#- patches/webhook_in_logadapters.yaml
+#- patches/cainjection_in_logadapters.yaml
