--- a/config/chart-crds/kustomization.yaml
+++ b/config/chart-crds/kustomization.yaml
@@ -3,15 +3,15 @@ namePrefix: opni-
 bases:
   - ../crd
 
-patchesStrategicMerge:
-- patches/webhook_in_opniclusters.yaml
+#patchesStrategicMerge:
+#- patches/webhook_in_opniclusters.yaml
 # - patches/webhook_in_opnidemoes.yaml
-- patches/webhook_in_logadapters.yaml
-- patches/webhook_in_pretrainedmodels.yaml
-- patches/webhook_in_gpupolicyadapters.yaml
+#- patches/webhook_in_logadapters.yaml
+#- patches/webhook_in_pretrainedmodels.yaml
+#- patches/webhook_in_gpupolicyadapters.yaml
 
-- patches/cainjection_in_opniclusters.yaml
+#- patches/cainjection_in_opniclusters.yaml
 #- patches/cainjection_in_opnidemoes.yaml
-- patches/cainjection_in_logadapters.yaml
-- patches/cainjection_in_pretrainedmodels.yaml
-- patches/cainjection_in_gpupolicyadapters.yaml
+#- patches/cainjection_in_logadapters.yaml
+#- patches/cainjection_in_pretrainedmodels.yaml
+#- patches/cainjection_in_gpupolicyadapters.yaml
