--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -25,13 +25,24 @@ resources:
 - bases/opni.io_multiclusterrolebindings.yaml
 - bases/opni.io_loggingclusterbindings.yaml
 - bases/opni.io_multiclusterusers.yaml
-- bases/opni.io_bootstraptokens.yaml
-- bases/opni.io_clusters.yaml
-- bases/opni.io_keyrings.yaml
 - bases/opni.io_gateways.yaml
 - bases/opni.io_monitoringclusters.yaml
-- bases/opni.io_roles.yaml
-- bases/opni.io_rolebindings.yaml
+- bases/ai.opni.io_opniclusters.yaml
+- bases/ai.opni.io_pretrainedmodels.yaml
+- bases/core.opni.io_gateways.yaml
+- bases/core.opni.io_loggingclusters.yaml
+- bases/core.opni.io_monitoringclusters.yaml
+- bases/logging.opni.io_datapreppers.yaml
+- bases/logging.opni.io_logadapters.yaml
+- bases/logging.opni.io_loggingclusterbindings.yaml
+- bases/logging.opni.io_multiclusterrolebindings.yaml
+- bases/logging.opni.io_multiclusterusers.yaml
+- bases/logging.opni.io_opniopensearches.yaml
+- bases/monitoring.opni.io_bootstraptokens.yaml
+- bases/monitoring.opni.io_clusters.yaml
+- bases/monitoring.opni.io_keyrings.yaml
+- bases/monitoring.opni.io_rolebindings.yaml
+- bases/monitoring.opni.io_roles.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
